--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ nav {
     <h2>Cosmetics</h2>
     <div class="products">
         <div class="product">
-            <img src="OIP.jpg">
+            <img src="images/OIP.jpg">
             <h3>Lipstick</h3>
             <p class="price">₹499</p>
             <button class="cart-btn">Add to Cart</button>
@@ -207,7 +207,7 @@ nav {
         </div>
 
         <div class="product">
-            <img src="cream.jpg">
+            <img src="image/cream.jpg">
             <h3>Face Cream</h3>
             <p class="price">₹699</p>
             <button class="cart-btn">Add to Cart</button>
@@ -230,35 +230,35 @@ nav {
         </div>
 
         <div class="product">
-            <img src="laptop.jpg" alt="Laptop">
+            <img src="images/laptop.jpg" alt="Laptop">
             <h3>Laptop</h3>
             <p class="price">₹49,999</p>
             <button class="cart-btn">Add to Cart</button>
         </div>
 
         <div class="product">
-            <img src="washing machine.jpg" alt="Washing Machine">
+            <img src="images/washing machine.jpg" alt="Washing Machine">
             <h3>Washing Machine</h3>
             <p class="price">₹21,999</p>
             <button class="cart-btn">Add to Cart</button>
         </div>
 
         <div class="product">
-            <img src="ac (1).jpg" alt="Air Conditioner">
+            <img src="images/ac (1).jpg" alt="Air Conditioner">
             <h3>AC</h3>
             <p class="price">₹29,999</p>
             <button class="cart-btn">Add to Cart</button>
         </div>
         
         <div class="product">
-            <img src="tv.jpg" alt="LED TV">
+            <img src="images/tv.jpg" alt="LED TV">
             <h3>LED TV</h3>
             <p class="price">₹34,999</p>
             <button class="cart-btn">Add to Cart</button>
         </div>
 
         <div class="product">
-            <img src="headphone.jpg" alt="Headphones">
+            <img src="images/headphone.jpg" alt="Headphones">
             <h3>Headphones</h3>
             <p class="price">₹3,499</p>
             <button class="cart-btn">Add to Cart</button>
@@ -272,7 +272,7 @@ nav {
     <div class="products">
 
         <div class="product">
-            <img src="snacks.jpg" alt="Snacks">
+            <img src="images/snacks.jpg" alt="Snacks">
             <h3>Snacks</h3>
             <p class="price">₹199</p>
             <button class="cart-btn">Add to Cart</button>
@@ -280,7 +280,7 @@ nav {
         </div>
 
         <div class="product">
-            <img src="bis.jpg" alt="Biscuits">
+            <img src="images/bis.jpg" alt="Biscuits">
             <h3>Biscuits</h3>
             <p class="price">₹99</p>
             <button class="cart-btn">Add to Cart</button>
@@ -288,7 +288,7 @@ nav {
         </div>
 
         <div class="product">
-            <img src="oil.jpg" alt="Oil">
+            <img src="images/oil.jpg" alt="Oil">
             <h3>Cooking Oil</h3>
             <p class="price">₹249</p>
             <button class="cart-btn">Add to Cart</button>
@@ -303,7 +303,7 @@ nav {
     <div class="products">
 
         <div class="product">
-            <img src="tshirt.jpg" alt="T-Shirt">
+            <img src="images/tshirt.jpg" alt="T-Shirt">
             <h3>T-Shirt</h3>
             <p class="price">₹799</p>
             <button class="cart-btn">Add to Cart</button>
@@ -311,7 +311,7 @@ nav {
         </div>
 
         <div class="product">
-            <img src="jean.jpg" alt="Jeans">
+            <img src="images/jean.jpg" alt="Jeans">
             <h3>Jeans</h3>
             <p class="price">₹1,299</p>
             <button class="cart-btn">Add to Cart</button>
@@ -319,7 +319,7 @@ nav {
         </div>
 
         <div class="product">
-            <img src="formal.jpg" alt="Shirt">
+            <img src="images/formal.jpg" alt="Shirt">
             <h3>Formal Shirt</h3>
             <p class="price">₹999</p>
             <button class="cart-btn">Add to Cart</button>
@@ -431,3 +431,4 @@ function confirmOrder() {
     <p><strong>Email:</strong> <a href="mailto:feha@gmail.com">feha@gmail.com</a></p>
     <p><strong>Address:</strong> 9th Street, RSS Road, Nagercoil - 629001</p>
 </section>
+
